--- a/code/01_gse85218.ipynb
+++ b/code/01_gse85218.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE131482"
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE85218"
    ]
   },
   {
@@ -43,7 +43,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE131482\""
+    "feature_x_sample = pd.read_csv(\"mmc2.tsv\", sep=\"\\t\", index_col=0).T\n",
+    "\n",
+    "feature_x_sample.index.name = \"Feature\"\n",
+    "\n",
+    "feature_x_sample"
    ]
   },
   {
@@ -52,19 +56,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(\n",
-    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path_0 = kraft.internet.download(\n",
-    "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL13534%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
+    "file_path = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212%5FMethylation%5F763samples%5FSubtypeStudy%5FTaylorLab%5Fbeta%5Fvalues%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
@@ -76,38 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cg_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0).iloc[:, 0::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file_path_1 = kraft.internet.download(\n",
-    "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL21145%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
-    "    overwrite=SETTING[\"overwrite\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cg_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0).iloc[:, 0::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cg_x_sample = pd.concat((cg_x_sample_0, cg_x_sample_1), axis=1)\n",
+    "cg_x_sample = pd.read_csv(file_path, sep=\"\\t\")\n",
     "\n",
     "ch3_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
@@ -120,6 +82,48 @@
     "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
     "\n",
     "ch3_gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217%5FM%5Fexp%5F763%5FMB%5FSubtypeStudy%5FTaylorLab%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ensg_x_sample = pd.read_csv(file_path, sep=\"\\t\", index_col=2).drop(\n",
+    "    labels=[\n",
+    "        \"Probe.Set.Name\",\n",
+    "        \"Description\",\n",
+    "        \"HGNC_symbol_from_ensemblv77\",\n",
+    "        \"HGNC_ID_from_ensemblv77\",\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")\n",
+    "\n",
+    "rna_gene_x_sample = pd.DataFrame(\n",
+    "    data=ensg_x_sample.to_numpy(), columns=ensg_x_sample.columns\n",
+    ")\n",
+    "\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_genes(ensg_x_sample.index.to_numpy())\n",
+    "\n",
+    "rna_gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "rna_gene_x_sample = kraft.feature_x_sample.collapse(rna_gene_x_sample)\n",
+    "\n",
+    "rna_gene_x_sample"
    ]
   }
  ],
