--- a/code/03_gse93646.ipynb
+++ b/code/03_gse93646.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Decoding the regulatory landscape of medulloblastoma using DNA methylation sequencing](https://www.nature.com/articles/nature13268)\n",
-    "\n",
-    "[GSE54880](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE54880) has methylation data.\n",
-    "\n",
-    "We read the information values and the sample values from its SOFT file."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE93646"
    ]
   },
   {
@@ -47,9 +43,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
+    "gse_id = \"GSE93646\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cg_x_sample = pd.read_csv(\n",
+    "    kraft.internet.download(\n",
+    "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
+    "        SETTING[\"data_directory_path\"],\n",
+    "        overwrite=SETTING[\"overwrite\"],\n",
+    "    ),\n",
+    "    sep=\"\\t\",\n",
+    "    index_col=1,\n",
+    ").iloc[:, 1::2]\n",
     "\n",
-    "overwrite = False"
+    "ch3_gene_x_sample = pd.DataFrame(\n",
+    "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
+    ")\n",
+    "\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "\n",
+    "ch3_gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "\n",
+    "ch3_gene_x_sample"
    ]
   },
   {
@@ -58,16 +92,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE54880\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "_x_samples[0].columns = ch3_gene_x_sample.columns"
    ]
   }
  ],
