--- a/code/06_gse46045.ipynb
+++ b/code/06_gse46045.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE46045"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -16,9 +23,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import re\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
     "import kraft"
@@ -39,11 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notebooks = sorted(\n",
-    "    (notebook for notebook in os.listdir() if re.match(r\"^[^._].+\\.ipynb$\", notebook))\n",
-    ")\n",
-    "\n",
-    "notebooks.remove(\"00_all.ipynb\")"
+    "gse_id = \"GSE46045\""
    ]
   },
   {
@@ -52,21 +52,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for notebook in notebooks:\n",
-    "\n",
-    "    kraft.shell.command(\n",
-    "        \"jupyter nbconvert --execute --ExecutePreprocessor.timeout=-1 --inplace {}\".format(\n",
-    "            notebook\n",
-    "        )\n",
-    "    )"
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
    ]
   }
  ],
  "metadata": {
-  "@webio": {
-   "lastCommId": null,
-   "lastKernelId": null
-  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
