--- a/code/08.ipynb
+++ b/code/08.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Frequent Amplification of a chr19q13.41 MicroRNA Polycistron in Aggressive Primitive Neuroectodermal Brain Tumors](https://www.cell.com/cancer-cell/fulltext/S1535-6108(09)00388-2)\n",
-    "\n",
-    "[GSE14087](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14087) has SNP data.\n",
-    "\n",
-    "We read the information values and the sample values from its SOFT file."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14087"
    ]
   },
   {
@@ -47,17 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
-    "\n",
-    "overwrite = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gse_id = \"GSE14087\""
    ]
   },
@@ -67,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
    ]
   }
  ],
