--- a/code/09.ipynb
+++ b/code/09.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Medulloblastoma Comprises Four Distinct Molecular Variants ](https://ascopubs.org/doi/full/10.1200/JCO.2009.27.4324?url_ver=Z39.88-2003&rfr_id=ori%3Arid%3Acrossref.org&rfr_dat=cr_pub%3Dpubmed&)\n",
-    "\n",
-    "[GSE21140](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE21140) has RNA data.\n",
-    "\n",
-    "We read the information values and the sample values from its SOFT file."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE21140"
    ]
   },
   {
@@ -47,17 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
-    "\n",
-    "overwrite = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gse_id = \"GSE21140\""
    ]
   },
@@ -67,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
    ]
   }
  ],
