--- a/code/10.ipynb
+++ b/code/10.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Humanized Stem Cell Models of Pediatric Medulloblastoma Reveal an Oct4/mTOR Axis that Promotes Malignancy](https://www.cell.com/cell-stem-cell/fulltext/S1934-5909(19)30426-6?_returnURL=https%3A%2F%2Flinkinghub.elsevier.com%2Fretrieve%2Fpii%2FS1934590919304266%3Fshowall%3Dtrue)\n",
-    "\n",
-    "[GSE106728](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE106728) is a SuperSeries containing [GSE106725](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE106725) (SNP data) and [GSE106727](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE106727) (RNA data)."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE106728"
    ]
   },
   {
@@ -45,17 +43,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
-    "\n",
-    "overwrite = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "gse_id = \"GSE106728\""
    ]
   },
@@ -65,7 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
    ]
   },
   {
@@ -74,7 +63,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE106725\""
+    "file_path_0 = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5FExpression%5Fnormalized%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
    ]
   },
   {
@@ -83,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "gene_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0)"
    ]
   },
   {
@@ -92,7 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE106727\""
+    "file_path_1 = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fip%5F308%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
    ]
   },
   {
@@ -101,7 +98,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "gene_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path_2 = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fis%5F119%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample_2 = pd.read_csv(file_path_2, sep=\"\\t\", index_col=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = pd.concat((gene_x_sample_0, gene_x_sample_1, gene_x_sample_2,), axis=1)\n",
+    "\n",
+    "gene_x_sample.index = kraft.name_biology.name_genes(gene_x_sample.index)\n",
+    "\n",
+    "gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat((_x_samples[3], gene_x_sample), axis=1)"
    ]
   }
  ],
