--- a/code/11_gse75153.ipynb
+++ b/code/11_gse75153.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Subgroup-specific structural variation across 1,000 medulloblastoma genomes](https://www.nature.com/articles/nature11327)\n",
-    "\n",
-    "[GSE37385](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37385) is a SuperSeries containing [GSE37382](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37382) (RNA data) and [GSE37384](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37384) (copy number data).\n",
-    "\n",
-    "5's SOFT file is 18GB because it contains 4, which is also 18GB.\n",
-    "\n",
-    "Because of 4's large size, we do not read 4 and 5.\n",
-    "\n",
-    "We only read the information values and the sample values from 2's SOFT file."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE75153"
    ]
   },
   {
@@ -51,9 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
-    "\n",
-    "overwrite = False"
+    "gse_id = \"GSE75153\""
    ]
   },
   {
@@ -62,16 +52,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37382\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
    ]
   }
  ],
