--- a/code/all.ipynb
+++ b/code/all.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## [Unpublished](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE75153)\n",
-    "\n",
-    "[GSE75153](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE75153) has methylation data.\n",
-    "\n",
-    "We read the information values and the sample values from its SOFT file."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -27,6 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import re\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "import kraft"
@@ -47,9 +39,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
+    "notebooks = sorted(\n",
+    "    (notebook for notebook in os.listdir() if re.match(r\"^[^._].+\\.ipynb$\", notebook))\n",
+    ")\n",
     "\n",
-    "overwrite = False"
+    "notebooks.remove(\"all.ipynb\")"
    ]
   },
   {
@@ -58,20 +52,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE75153\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "for notebook in notebooks:\n",
+    "\n",
+    "    kraft.shell.command(\n",
+    "        \"jupyter nbconvert --execute --ExecutePreprocessor.timeout=-1 --inplace {}\".format(\n",
+    "            notebook\n",
+    "        )\n",
+    "    )"
    ]
   }
  ],
  "metadata": {
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
