--- a/code/05_gse54880.ipynb
+++ b/code/05_gse54880.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## [Synergism between Hedgehog-GLI and EGFR Signaling in Hedgehog-Responsive Human Medulloblastoma Cells Induces Downregulation of Canonical Hedgehog-Target Genes and Stabilized Expression of GLI1](https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0065403)\n",
-    "\n",
-    "[GSE46045](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE46045) has methylation data.\n",
-    "\n",
-    "We read the information values and the sample values from its SOFT file."
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE54880"
    ]
   },
   {
@@ -47,27 +43,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_directory_path = SETTING[\"data_directory_path\"]\n",
+    "gse_id = \"GSE54880\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "_x_samples = kraft.geo.get_gse(\n",
+    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE54nnn/GSE54880/suppl/GSE54880%5FMB%2D450k%5FGEOupload%5FBeta%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cg_x_sample = pd.read_csv(file_path, sep=\"\\t\", na_values=(\" \",), index_col=0).iloc[\n",
+    "    :, 0::2\n",
+    "]\n",
     "\n",
-    "overwrite = False"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gse_id = \"GSE46045\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_samples = kraft.geo.get_gse(gse_id, data_directory_path, overwrite=overwrite)"
+    "ch3_gene_x_sample = pd.DataFrame(\n",
+    "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
+    ")\n",
+    "\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "\n",
+    "ch3_gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "\n",
+    "ch3_gene_x_sample"
    ]
   }
  ],
