--- a/code/03_gse93646.ipynb
+++ b/code/03_gse93646.ipynb
@@ -63,6 +63,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "binary_feature_x_sample = _x_samples[2]\n",
+    "\n",
+    "binary_feature_x_sample.columns = (\n",
+    "    label.split(sep=\"_\")[1] for label in binary_feature_x_sample.columns.to_numpy()\n",
+    ")\n",
+    "\n",
+    "binary_feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cg_x_sample = pd.read_csv(\n",
     "    kraft.internet.download(\n",
     "        \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE93nnn/GSE93646/suppl/GSE93646_processed_data.txt.gz\",\n",
@@ -73,26 +88,17 @@
     "    index_col=1,\n",
     ").iloc[:, 1::2]\n",
     "\n",
-    "ch3_gene_x_sample = pd.DataFrame(\n",
+    "cg_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
     "\n",
-    "ch3_gene_x_sample.index.name = \"Gene\"\n",
+    "cg_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
     "\n",
-    "ch3_gene_x_sample"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "_x_samples[0].columns = ch3_gene_x_sample.columns"
+    "cg_gene_x_sample"
    ]
   }
  ],
