--- a/code/04_gse54880.ipynb
+++ b/code/04_gse54880.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE37385"
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE54880"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE37382\""
+    "gse_id = \"GSE54880\""
    ]
   },
   {
@@ -74,9 +74,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = _x_samples[3]\n",
+    "file_path = kraft.internet.download(\n",
+    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE54nnn/GSE54880/suppl/GSE54880%5FMB%2D450k%5FGEOupload%5FBeta%2Etxt%2Egz\",\n",
+    "    SETTING[\"data_directory_path\"],\n",
+    "    overwrite=SETTING[\"overwrite\"],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cg_x_sample = pd.read_csv(file_path, sep=\"\\t\", na_values=(\" \",), index_col=0).iloc[\n",
+    "    :, 0::2\n",
+    "]\n",
     "\n",
-    "gene_x_sample"
+    "cg_x_sample.columns = (label[:-9] for label in cg_x_sample.columns.to_numpy())\n",
+    "\n",
+    "cg_gene_x_sample = pd.DataFrame(\n",
+    "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
+    ")\n",
+    "\n",
+    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "\n",
+    "cg_gene_x_sample.index.name = \"Gene\"\n",
+    "\n",
+    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
+    "\n",
+    "cg_gene_x_sample"
    ]
   }
  ],
