--- a/code/07_14087.ipynb
+++ b/code/07_14087.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE21140"
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE14087"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE21140\""
+    "gse_id = \"GSE14087\""
    ]
   },
   {
@@ -55,6 +55,48 @@
     "_x_samples = kraft.geo.get_gse(\n",
     "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "binary_feature_x_sample = _x_samples[2]\n",
+    "\n",
+    "binary_feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample_0 = _x_samples[3]\n",
+    "\n",
+    "gene_x_sample_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample_1 = _x_samples[4]\n",
+    "\n",
+    "gene_x_sample_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: combine"
    ]
   }
  ],
