--- a/code/05_gse46045.ipynb
+++ b/code/05_gse46045.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE54880"
+    "https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE46045"
    ]
   },
   {
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gse_id = \"GSE54880\""
+    "gse_id = \"GSE46045\""
    ]
   },
   {
@@ -63,11 +63,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path = kraft.internet.download(\n",
-    "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE54nnn/GSE54880/suppl/GSE54880%5FMB%2D450k%5FGEOupload%5FBeta%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
-    "    overwrite=SETTING[\"overwrite\"],\n",
-    ")"
+    "binary_feature_x_sample = _x_samples[2]\n",
+    "\n",
+    "binary_feature_x_sample"
    ]
   },
   {
@@ -76,21 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cg_x_sample = pd.read_csv(file_path, sep=\"\\t\", na_values=(\" \",), index_col=0).iloc[\n",
-    "    :, 0::2\n",
-    "]\n",
+    "gene_x_sample = _x_samples[3]\n",
     "\n",
-    "ch3_gene_x_sample = pd.DataFrame(\n",
-    "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
-    ")\n",
-    "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
-    "\n",
-    "ch3_gene_x_sample.index.name = \"Gene\"\n",
-    "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
-    "\n",
-    "ch3_gene_x_sample"
+    "gene_x_sample"
    ]
   }
  ],
