--- a/code/06_gse131482.ipynb
+++ b/code/06_gse131482.ipynb
@@ -63,28 +63,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "binary_feature_x_sample = _x_samples[2]\n",
+    "\n",
+    "binary_feature_x_sample.columns = (\n",
+    "    label[5:] for label in binary_feature_x_sample.columns.to_numpy()\n",
+    ")\n",
+    "\n",
+    "binary_feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_path_0 = kraft.internet.download(\n",
     "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL13534%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cg_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0).iloc[:, 0::2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "file_path_1 = kraft.internet.download(\n",
     "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL21145%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
@@ -98,6 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cg_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0).iloc[:, 0::2]\n",
+    "\n",
     "cg_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0).iloc[:, 0::2]"
    ]
   },
@@ -109,17 +110,17 @@
    "source": [
     "cg_x_sample = pd.concat((cg_x_sample_0, cg_x_sample_1), axis=1)\n",
     "\n",
-    "ch3_gene_x_sample = pd.DataFrame(\n",
+    "cg_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
     "\n",
-    "ch3_gene_x_sample.index.name = \"Gene\"\n",
+    "cg_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
     "\n",
-    "ch3_gene_x_sample"
+    "cg_gene_x_sample"
    ]
   }
  ],
