--- a/code/09_gse106728.ipynb
+++ b/code/09_gse106728.ipynb
@@ -63,50 +63,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "binary_feature_x_sample = _x_samples[2]\n",
+    "\n",
+    "binary_feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gene_x_sample = _x_samples[3]\n",
+    "\n",
+    "gene_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_path_0 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5FExpression%5Fnormalized%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "file_path_1 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fip%5F308%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gene_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    ")\n",
+    "\n",
     "file_path_2 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fis%5F119%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
@@ -120,6 +110,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gene_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0)\n",
+    "\n",
+    "gene_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0)\n",
+    "\n",
     "gene_x_sample_2 = pd.read_csv(file_path_2, sep=\"\\t\", index_col=0)"
    ]
   },
@@ -129,11 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = pd.concat((gene_x_sample_0, gene_x_sample_1, gene_x_sample_2,), axis=1)\n",
+    "gene_x_sample_ = pd.concat((gene_x_sample_0, gene_x_sample_1, gene_x_sample_2), axis=1)\n",
     "\n",
-    "gene_x_sample.index = kraft.name_biology.name_genes(gene_x_sample.index)\n",
+    "gene_x_sample_.index = kraft.name_biology.name_genes(gene_x_sample_.index.to_numpy())\n",
     "\n",
-    "gene_x_sample"
+    "gene_x_sample_"
    ]
   },
   {
@@ -142,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.concat((_x_samples[3], gene_x_sample), axis=1)"
+    "pd.concat((gene_x_sample, gene_x_sample_), axis=1)"
    ]
   }
  ],
