--- a/code/03_gse93646.ipynb
+++ b/code/03_gse93646.ipynb
@@ -88,17 +88,17 @@
     "    index_col=1,\n",
     ").iloc[:, 1::2]\n",
     "\n",
-    "cg_gene_x_sample = pd.DataFrame(\n",
+    "ch3_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
     "\n",
-    "cg_gene_x_sample.index.name = \"Gene\"\n",
+    "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
     "\n",
-    "cg_gene_x_sample"
+    "ch3_gene_x_sample"
    ]
   }
  ],
