--- a/code/08_gse106728.ipynb
+++ b/code/08_gse106728.ipynb
@@ -74,9 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = _x_samples[3]\n",
+    "ch3_gene_x_sample = _x_samples[3]\n",
     "\n",
-    "gene_x_sample"
+    "ch3_gene_x_sample"
    ]
   },
   {
@@ -85,19 +85,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path_0 = kraft.internet.download(\n",
+    "rna_file_path_0 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5FExpression%5Fnormalized%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")\n",
     "\n",
-    "file_path_1 = kraft.internet.download(\n",
+    "rna_file_path_1 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fip%5F308%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")\n",
     "\n",
-    "file_path_2 = kraft.internet.download(\n",
+    "rna_file_path_2 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fis%5F119%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
     "    SETTING[\"data_directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
@@ -110,11 +110,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample_0 = pd.read_csv(file_path_0, sep=\"\\t\", index_col=0)\n",
+    "rna_gene_x_sample_0 = pd.read_csv(rna_file_path_0, sep=\"\\t\", index_col=0)\n",
     "\n",
-    "gene_x_sample_1 = pd.read_csv(file_path_1, sep=\"\\t\", index_col=0)\n",
+    "rna_gene_x_sample_1 = pd.read_csv(rna_file_path_1, sep=\"\\t\", index_col=0)\n",
     "\n",
-    "gene_x_sample_2 = pd.read_csv(file_path_2, sep=\"\\t\", index_col=0)"
+    "rna_gene_x_sample_2 = pd.read_csv(rna_file_path_2, sep=\"\\t\", index_col=0)"
    ]
   },
   {
@@ -123,20 +123,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample_ = pd.concat((gene_x_sample_0, gene_x_sample_1, gene_x_sample_2), axis=1)\n",
+    "rna_gene_x_sample_ = pd.concat(\n",
+    "    (rna_gene_x_sample_0, rna_gene_x_sample_1, rna_gene_x_sample_2), axis=1\n",
+    ")\n",
     "\n",
-    "gene_x_sample_.index = kraft.name_biology.name_genes(gene_x_sample_.index.to_numpy())\n",
+    "rna_gene_x_sample_.index = kraft.name_biology.name_genes(\n",
+    "    rna_gene_x_sample_.index.to_numpy()\n",
+    ")\n",
     "\n",
-    "gene_x_sample_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.concat((gene_x_sample, gene_x_sample_), axis=1)"
+    "rna_gene_x_sample_"
    ]
   }
  ],
