--- a/code/01_gse85218.ipynb
+++ b/code/01_gse85218.ipynb
@@ -71,17 +71,17 @@
    "source": [
     "cg_x_sample = pd.read_csv(file_path, sep=\"\\t\")\n",
     "\n",
-    "cg_gene_x_sample = pd.DataFrame(\n",
+    "ch3_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
     "\n",
-    "cg_gene_x_sample.index.name = \"Gene\"\n",
+    "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
     "\n",
-    "cg_gene_x_sample"
+    "ch3_gene_x_sample"
    ]
   },
   {
@@ -113,17 +113,17 @@
     "    axis=1,\n",
     ")\n",
     "\n",
-    "ensg_gene_x_sample = pd.DataFrame(\n",
+    "rna_gene_x_sample = pd.DataFrame(\n",
     "    data=ensg_x_sample.to_numpy(), columns=ensg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ensg_gene_x_sample.index = kraft.name_biology.name_genes(ensg_x_sample.index.to_numpy())\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_genes(ensg_x_sample.index.to_numpy())\n",
     "\n",
-    "ensg_gene_x_sample.index.name = \"Gene\"\n",
+    "rna_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ensg_gene_x_sample = kraft.feature_x_sample.collapse(ensg_gene_x_sample)\n",
+    "rna_gene_x_sample = kraft.feature_x_sample.collapse(rna_gene_x_sample)\n",
     "\n",
-    "ensg_gene_x_sample"
+    "rna_gene_x_sample"
    ]
   }
  ],
