--- a/code/04_gse54880.ipynb
+++ b/code/04_gse54880.ipynb
@@ -93,17 +93,17 @@
     "\n",
     "cg_x_sample.columns = (label[:-9] for label in cg_x_sample.columns.to_numpy())\n",
     "\n",
-    "cg_gene_x_sample = pd.DataFrame(\n",
+    "ch3_gene_x_sample = pd.DataFrame(\n",
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "cg_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
     "\n",
-    "cg_gene_x_sample.index.name = \"Gene\"\n",
+    "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "cg_gene_x_sample = kraft.feature_x_sample.collapse(cg_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
     "\n",
-    "cg_gene_x_sample"
+    "ch3_gene_x_sample"
    ]
   }
  ],
