--- a/code/01_gse85218.ipynb
+++ b/code/01_gse85218.ipynb
@@ -13,8 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "from __init__ import *"
    ]
   },
   {
@@ -23,18 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "gse_id = \"GSE85218\""
    ]
   },
   {
@@ -58,7 +46,7 @@
    "source": [
     "file_path = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85212/suppl/GSE85212%5FMethylation%5F763samples%5FSubtypeStudy%5FTaylorLab%5Fbeta%5Fvalues%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
    ]
@@ -92,7 +80,7 @@
    "source": [
     "file_path = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE85nnn/GSE85217/suppl/GSE85217%5FM%5Fexp%5F763%5FMB%5FSubtypeStudy%5FTaylorLab%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
    ]
