--- a/code/04_gse54880.ipynb
+++ b/code/04_gse54880.ipynb
@@ -13,28 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "from __init__ import *"
    ]
   },
   {
@@ -53,7 +32,7 @@
    "outputs": [],
    "source": [
     "_x_samples = kraft.geo.get_gse(\n",
-    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
   },
@@ -76,7 +55,7 @@
    "source": [
     "file_path = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE54nnn/GSE54880/suppl/GSE54880%5FMB%2D450k%5FGEOupload%5FBeta%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
    ]
