--- a/code/all.ipynb
+++ b/code/all.ipynb
@@ -6,31 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import re\n",
-    "\n",
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "from __init__ import *"
    ]
   },
   {
