--- a/code/06_gse131482.ipynb
+++ b/code/06_gse131482.ipynb
@@ -13,28 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "from __init__ import *"
    ]
   },
   {
@@ -53,7 +32,7 @@
    "outputs": [],
    "source": [
     "_x_samples = kraft.geo.get_gse(\n",
-    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
   },
@@ -80,13 +59,13 @@
    "source": [
     "file_path_0 = kraft.internet.download(\n",
     "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL13534%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")\n",
     "\n",
     "file_path_1 = kraft.internet.download(\n",
     "    \"https://ftp.ncbi.nlm.nih.gov/geo/series/GSE131nnn/GSE131482/suppl/GSE131482%5FGPL21145%5Fmatrix%5Fprocessed%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
    ]
