--- a/code/07_gse21140.ipynb
+++ b/code/07_gse21140.ipynb
@@ -13,28 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "from __init__ import *"
    ]
   },
   {
@@ -53,7 +32,7 @@
    "outputs": [],
    "source": [
     "_x_samples = kraft.geo.get_gse(\n",
-    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
   },
