--- a/code/08_gse106728.ipynb
+++ b/code/08_gse106728.ipynb
@@ -13,28 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "import kraft"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SETTING = kraft.json.read(\"setting.json\")"
+    "from __init__ import *"
    ]
   },
   {
@@ -53,7 +32,7 @@
    "outputs": [],
    "source": [
     "_x_samples = kraft.geo.get_gse(\n",
-    "    gse_id, SETTING[\"data_directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
+    "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
   },
@@ -87,19 +66,19 @@
    "source": [
     "rna_file_path_0 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5FExpression%5Fnormalized%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")\n",
     "\n",
     "rna_file_path_1 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fip%5F308%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")\n",
     "\n",
     "rna_file_path_2 = kraft.internet.download(\n",
     "    \"ftp://ftp.ncbi.nlm.nih.gov/geo/series/GSE106nnn/GSE106725/suppl/GSE106725%5Fis%5F119%5Fraw%5Fcounts%2Etxt%2Egz\",\n",
-    "    SETTING[\"data_directory_path\"],\n",
+    "    SETTING[\"directory_path\"],\n",
     "    overwrite=SETTING[\"overwrite\"],\n",
     ")"
    ]
@@ -130,6 +109,8 @@
     "rna_gene_x_sample_.index = kraft.name_biology.name_genes(\n",
     "    rna_gene_x_sample_.index.to_numpy()\n",
     ")\n",
+    "\n",
+    "rna_gene_x_sample_.index.name = \"Gene\"\n",
     "\n",
     "rna_gene_x_sample_"
    ]
