--- a/code/03_gse93646.ipynb
+++ b/code/03_gse93646.ipynb
@@ -42,11 +42,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "continuous_feature_x_sample = _x_samples[1]\n",
+    "\n",
+    "continuous_feature_x_sample.columns = (\n",
+    "    label.split(sep=\"_\", maxsplit=1)[1]\n",
+    "    for label in continuous_feature_x_sample.columns.to_numpy()\n",
+    ")\n",
+    "\n",
+    "continuous_feature_x_sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "binary_feature_x_sample = _x_samples[2]\n",
     "\n",
-    "binary_feature_x_sample.columns = (\n",
-    "    label.split(sep=\"_\")[1] for label in binary_feature_x_sample.columns.to_numpy()\n",
-    ")\n",
+    "binary_feature_x_sample.columns = continuous_feature_x_sample.columns\n",
     "\n",
     "binary_feature_x_sample"
    ]
