--- a/code/08_gse106728.ipynb
+++ b/code/08_gse106728.ipynb
@@ -102,17 +102,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rna_gene_x_sample_ = pd.concat(\n",
+    "rna_gene_x_sample = pd.concat(\n",
     "    (rna_gene_x_sample_0, rna_gene_x_sample_1, rna_gene_x_sample_2), axis=1\n",
     ")\n",
     "\n",
-    "rna_gene_x_sample_.index = kraft.name_biology.name_genes(\n",
-    "    rna_gene_x_sample_.index.to_numpy()\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_genes(\n",
+    "    rna_gene_x_sample.index.to_numpy()\n",
     ")\n",
     "\n",
-    "rna_gene_x_sample_.index.name = \"Gene\"\n",
+    "rna_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "rna_gene_x_sample_"
+    "rna_gene_x_sample"
    ]
   }
  ],
