--- a/code/00_all.ipynb
+++ b/code/00_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,22 +19,14 @@
     "    (notebook for notebook in os.listdir() if re.match(r\"^[^._].+\\.ipynb$\", notebook))\n",
     ")\n",
     "\n",
-    "notebooks.remove(\"all.ipynb\")"
+    "notebooks.remove(\"00_all.ipynb\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "jupyter nbconvert --execute --ExecutePreprocessor.timeout=-1 --inplace 01_gse85218.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for notebook in notebooks:\n",
     "\n",
