--- a/code/04_gse54880.ipynb
+++ b/code/04_gse54880.ipynb
@@ -42,6 +42,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: fix age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "binary_feature_x_sample = _x_samples[2]\n",
     "\n",
     "binary_feature_x_sample"
