--- a/code/01_gse85218.ipynb
+++ b/code/01_gse85218.ipynb
@@ -63,11 +63,11 @@
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_gene(cg_x_sample.index.to_numpy())\n",
     "\n",
     "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.pd.collapse(ch3_gene_x_sample)\n",
     "\n",
     "ch3_gene_x_sample"
    ]
@@ -105,11 +105,11 @@
     "    data=ensg_x_sample.to_numpy(), columns=ensg_x_sample.columns\n",
     ")\n",
     "\n",
-    "rna_gene_x_sample.index = kraft.name_biology.name_genes(ensg_x_sample.index.to_numpy())\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_gene(ensg_x_sample.index.to_numpy())\n",
     "\n",
     "rna_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "rna_gene_x_sample = kraft.feature_x_sample.collapse(rna_gene_x_sample)\n",
+    "rna_gene_x_sample = kraft.pd.collapse(rna_gene_x_sample)\n",
     "\n",
     "rna_gene_x_sample"
    ]
