--- a/code/03_gse93646.ipynb
+++ b/code/03_gse93646.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(\n",
+    "_x_sample_ = kraft.geo.get_gse(\n",
     "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "continuous_feature_x_sample = _x_samples[1]\n",
+    "continuous_feature_x_sample = _x_sample_[1]\n",
     "\n",
     "continuous_feature_x_sample.columns = (\n",
     "    label.split(sep=\"_\", maxsplit=1)[1]\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_feature_x_sample = _x_samples[2]\n",
+    "binary_feature_x_sample = _x_sample_[2]\n",
     "\n",
     "binary_feature_x_sample.columns = continuous_feature_x_sample.columns\n",
     "\n",
@@ -85,11 +85,11 @@
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_gene(cg_x_sample.index.to_numpy())\n",
     "\n",
     "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.pd.collapse(ch3_gene_x_sample)\n",
     "\n",
     "ch3_gene_x_sample"
    ]
