--- a/code/08_gse106728.ipynb
+++ b/code/08_gse106728.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(\n",
+    "_x_sample_ = kraft.geo.get_gse(\n",
     "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_feature_x_sample = _x_samples[2]\n",
+    "binary_feature_x_sample = _x_sample_[2]\n",
     "\n",
     "binary_feature_x_sample"
    ]
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ch3_gene_x_sample = _x_samples[3]\n",
+    "ch3_gene_x_sample = _x_sample_[3]\n",
     "\n",
     "ch3_gene_x_sample"
    ]
@@ -106,7 +106,7 @@
     "    (rna_gene_x_sample_0, rna_gene_x_sample_1, rna_gene_x_sample_2), axis=1\n",
     ")\n",
     "\n",
-    "rna_gene_x_sample.index = kraft.name_biology.name_genes(\n",
+    "rna_gene_x_sample.index = kraft.name_biology.name_gene(\n",
     "    rna_gene_x_sample.index.to_numpy()\n",
     ")\n",
     "\n",
