--- a/code/06_gse131482.ipynb
+++ b/code/06_gse131482.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(\n",
+    "_x_sample_ = kraft.geo.get_gse(\n",
     "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_feature_x_sample = _x_samples[2]\n",
+    "binary_feature_x_sample = _x_sample_[2]\n",
     "\n",
     "binary_feature_x_sample.columns = (\n",
     "    label[5:] for label in binary_feature_x_sample.columns.to_numpy()\n",
@@ -93,11 +93,11 @@
     "    data=cg_x_sample.to_numpy(), columns=cg_x_sample.columns\n",
     ")\n",
     "\n",
-    "ch3_gene_x_sample.index = kraft.name_biology.name_genes(cg_x_sample.index.to_numpy())\n",
+    "ch3_gene_x_sample.index = kraft.name_biology.name_gene(cg_x_sample.index.to_numpy())\n",
     "\n",
     "ch3_gene_x_sample.index.name = \"Gene\"\n",
     "\n",
-    "ch3_gene_x_sample = kraft.feature_x_sample.collapse(ch3_gene_x_sample)\n",
+    "ch3_gene_x_sample = kraft.pd.collapse(ch3_gene_x_sample)\n",
     "\n",
     "ch3_gene_x_sample"
    ]
