--- a/code/07_gse21140.ipynb
+++ b/code/07_gse21140.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "_x_samples = kraft.geo.get_gse(\n",
+    "_x_sample_ = kraft.geo.get_gse(\n",
     "    gse_id, SETTING[\"directory_path\"], overwrite=SETTING[\"overwrite\"]\n",
     ")"
    ]
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_feature_x_sample = _x_samples[2]\n",
+    "binary_feature_x_sample = _x_sample_[2]\n",
     "\n",
     "binary_feature_x_sample"
    ]
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_x_sample = _x_samples[3]\n",
+    "gene_x_sample = _x_sample_[3]\n",
     "\n",
     "gene_x_sample"
    ]
