--- a/code/00_all.ipynb
+++ b/code/00_all.ipynb
@@ -15,11 +15,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "notebooks = sorted(\n",
-    "    (notebook for notebook in os.listdir() if re.match(r\"^[^._].+\\.ipynb$\", notebook))\n",
+    "notebook_name_ = sorted(\n",
+    "    (name for name in os.listdir() if re.match(r\"^[^._].+\\.ipynb$\", name))\n",
     ")\n",
     "\n",
-    "notebooks.remove(\"00_all.ipynb\")"
+    "notebook_name_.remove(\"00_all.ipynb\")"
    ]
   },
   {
@@ -28,11 +28,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for notebook in notebooks:\n",
+    "for name in notebook_name_:\n",
     "\n",
     "    kraft.shell.command(\n",
     "        \"jupyter nbconvert --execute --ExecutePreprocessor.timeout=-1 --inplace {}\".format(\n",
-    "            notebook\n",
+    "           name \n",
     "        )\n",
     "    )"
    ]
